--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,159 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+
+.container {
+    max-width: 66vh;
+    margin: 1px auto;
+    overflow: auto;
+    min-height: 300px;
+    border: 1px solid steelblue;
+    padding: 1px;
+    border-radius: 5px;
+  }
+
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+  }
+
+  .btn {
+    display: inline-block;
+    background: #000;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    margin: 5px;
+    border-radius: 5px;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 15px;
+    font-family: inherit;
+  }
+  
+  .btn:focus {
+    outline: none;
+  }
+  
+  .btn:active {
+    transform: scale(0.98);
+  }
+  
+  .btn-block {
+    display: block;
+    width: 100%;
+  }
+
+  .task {
+    background: #f4f4f431;
+    margin: 5px;
+    padding: 10px 20px;
+    cursor: pointer;
+  }
+  
+  .task.reminder {
+    border-left: 5px solid green;
+  }
+  
+  .task h3 {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  
+  .add-form {
+    margin-bottom: 40px;
+  }
+  
+  .form-control {
+    margin: 20px 0;
+  }
+  
+  .form-control label {
+    display: block;
+  }
+  
+  .form-control input {
+    width: 100%;
+    height: 40px;
+    margin: 5px;
+    padding: 3px 7px;
+    font-size: 17px;
+  }
+  
+  .form-control-check {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  
+  .form-control-check label {
+    flex: 1;
+  }
+  
+  .form-control-check input {
+    flex: 2;
+    height: 20px;
+  }
+  
+  footer {
+    margin-top: 30px;
+    text-align: center;
+  }
+  
+  .image{
+    height: auto;
+    width: auto;
+    max-width: 50%;
+    min-width: 50%;
+  }
+  
+  .moon {
+    animation: moonanim 2s 1;
+    position: relative;
+    margin: 10px;
+    width: 200px;
+    height: 200px;
+    background: #c7cbd0;
+    border-radius: 50%;
+    box-shadow: inset -25px 0px 0 0px #9098a1;
+    transition: transform 0.2s ease-in-out;
+  }
+  
+  li {
+    position: absolute;
+    list-style: none;
+    background: #737277;
+    border-radius: 50%;
+  }
+  li:nth-child(1) {
+    left: 25px;
+    top: 60px;
+    width: 50px;
+    height: 50px;
+    box-shadow: inset 6px -2px 0 0px #414043;
+  }
+  li:nth-child(2) {
+    left: 150px;
+    top: 50px;
+    width: 25px;
+    height: 25px;
+    box-shadow: inset 3px -1px 0 0px #414043;
+  }
+  
+  li:nth-child(3) {
+    left: 100px;
+    top: 150px;
+    width: 25px;
+    height: 25px;
+    box-shadow: inset 3px -1px 0 0px #414043;
+  }
+  
+  li:nth-child(4) {
+    left: 50px;
+    top: 150px;
+    width: 12.5px;
+    height: 12.5px;
+    box-shadow: inset 2.4px -0.8px 0 0px #414043;
+  }
